--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -6,46 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Sheet</title>
     <style>
-       body {
+        body {
     font-family: Arial, sans-serif;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 0;
 }
 
-.header {
+header {
+    background-color: #4CAF50;
+    color: white;
     text-align: center;
-    margin: 20px 0;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .button-container {
+    margin: 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 10px 0;
+    gap: 10px;
 }
 
-.button-container select,
-.button-container button {
-    margin: 5px;
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid #ddd;
+.button-container button,
+.button-container select {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
+.button-container button:hover,
+.button-container select:hover {
+    background-color: #45a049;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin: 20px auto;
+    overflow-x: auto;
 }
 
 th, td {
+    padding: 10px;
     border: 1px solid #ddd;
-    padding: 8px;
     text-align: left;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #4CAF50;
+    color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+th, td {
+    min-width: 120px;
 }
 
 tr:nth-child(even) {
@@ -60,26 +80,26 @@ tr:nth-child(even) {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: white;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .close {
     color: #aaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
+    float: right;
+    cursor: pointer;
 }
 
 .close:hover,
@@ -89,6 +109,73 @@ tr:nth-child(even) {
     cursor: pointer;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #4CAF50;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content button {
+    color: white;
+    padding: 12px 16px;
+    text-align: left;
+    background-color: #4CAF50;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+}
+
+.dropdown-content button:hover {
+    background-color: #45a049;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown button:hover {
+    background-color: #090b09;
+}
+
+input[type="text"], select {
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+/* Responsive Design */
 @media screen and (max-width: 600px) {
     .button-container {
         flex-direction: column;
@@ -122,6 +209,11 @@ tr:nth-child(even) {
         padding-left: 15px;
         font-weight: bold;
         text-align: left;
+    }
+
+    .modal-content {
+        width: 90%;
+        max-width: 100%;
     }
 }
     </style>
