--- a/Chris.html
+++ b/Chris.html
@@ -152,7 +152,7 @@
             apiKey: "AIzaSyB2av1im8_wJNOin20npWlnGEBnG89MVU0",
             authDomain: "stranger-6b6cf.firebaseapp.com",
             projectId: "stranger-6b6cf",
-            storageBucket: "stranger-6b6cf.firebasestorage.app",
+            storageBucket: "stranger-6b6cf.appspot.com",
             messagingSenderId: "833066708868",
             appId: "1:833066708868:web:bf097bcee3141df4fe77d1",
         };
